# yayadb-modules

./: .gitignore  Apps.sql  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  deps.json
lang/: Makefile
lang/include/: lex.h
lang/src/: lex  lex.c  main.c  vm.c
protocol/: CMakeLists.txt  Makefile
protocol/.cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
protocol/include/: proto.h  socket.h
protocol/src/: proto.c  socket.c  test.c  test.py
usrmgmt/: CMakeLists.txt
usrmgmt/src/: manager.c  test.c
